fixed submit button on ios

--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
 html,body {
     background-color: #E5E5E5;
     height: 100%;
